--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -118,7 +118,7 @@ In recent years, an unprecedented quantity and variety of information has been m
 A common goal for the release of such data has been to provide end-user citizens an ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately been consumed by app developers, journalists and other ``data specialists'' in one-off data analyses, apps and investigations, remaining still far from influencing the activities of ordinary end-user citizens. A core reason for this, we posit, is a lack of suitable tools for accessing and interrogating these heterogeneous data sets, and a means by which these disparate information sources can be effectively brought together and cross-referenced.  For example, most personal information management (PIM) tools only provide facilities for managing small, pre-fixed sets of data types (such as digital calendaring tools and to-do list managers) or provide little or no support for structured data at all, such as text editors and sketching/drawing tools \cite{infoscraps}.   
 
 % We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. 
-In this paper, we present an investigation into ways that PIM tools might be extended to allow data to be brought in in an ad-hoc fashion from any structured data source, combined with other data, and interrogated to effectively allow end-user citizens to harness knowledge from the vast, emerging and future ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach in this investigation: first, we performed a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people routinely drew upon multiple and diverse sources for reasons including coverage, reliability, and to gain multiple perspectives or subjective assessments.  
+In this paper, we present an investigation into ways that PIM tools might be extended to allow data to be brought together in an ad-hoc fashion from arbitrary structured data sources, and interrogated, so as to enable end-user citizens to effectively harness knowledge from the vast, emerging ecosystems of data.  We used a three-stage sequential exploratory mixed-method approach in this investigation: first, we performed a semi-structured interview pre-study to understand the types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people routinely drew upon multiple and diverse sources for reasons including coverage, reliability, and to gain multiple perspectives or subjective assessments.  
 
 % Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: address books (contact info), event calendars (events), music (songs/tracks), shopping (product info) social networking (profiles) and weather (forecasts), finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
@@ -133,13 +133,23 @@ In this section, we motivate our work using three fields: PIM, data integration,
 The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
 \end{quote}
 
-A result of this problem is that users can experience data fragmentation~\cite{Jones05towardsa} across multiple web-based applications and services, and struggle to consolidate across them~\cite{bergman,boardmansasse}.  In our own previously-conducted field study, \cite{infoscraps} we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage both online and offline data.  Similar findings from other studies observed volunteers' ``homebrew databases'': manually-maintained information collated to handle the heterogeneous data requirements of groups needing to coordinate their activities~\cite{Voida:2011:HDC:1978942.1979078}.\looseness=-1
+The user experience benefits of conquering such data integration challenges have been demonstrated in PIM prototype systems with integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and \emph{Stuff I've Seen}\cite{stuffiveseen}, showed the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about the people, places and things mentioned throughout his or her files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated the reduced effort and increased efficiency of being able to view and re-use information easily in multiple task contexts without fragmentation or loss of consistency when a single, consolidated data model was used across applications. 
 
-A number of research PIM systems have demonstrated how users benefit from unified, integrated data models.  SEMEX's~\cite{semex} uniform query interface allows users to quickly trace references of people, places and things across files, folders and repositories.  Similarly, Haystack  allows users to visualise and customise how they worked with their data in a uniform, consolidated manner \cite{haystack}. 
+Therefore, despite the multifaceted challenges of data integration, various fields have sought methods to resolve them. The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} fields, for example, have pursued automatic, recently machine-learning approaches to data integration, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching}.   In contrast, the end-user programming community has pursued user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{mashmaker}, Marmite \cite{marmite}, and Vegemite \cite{vegemite}) and visual programming languages such as Yahoo Pipes \cite{pipes}.
+
+Our approach is most directly inspired by systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but which, by generalising directly from examples, avoids the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which aims to allow people to easily consolidate and compare instances by their properties.
+
+% algorithms that train on a corpus of alignments and produce new alignments on unseen data schemas or instances, respectively
+
+%A result of this problem is that users can experience data fragmentation~\cite{Jones05towardsa} across multiple web-based applications and services, and struggle to consolidate across them~\cite{bergman,boardmansasse}.  In our own previously-conducted field study, \cite{infoscraps} we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage both online and offline data.  Similar findings from other studies observed volunteers' ``homebrew databases'': manually-maintained information collated to handle the heterogeneous data requirements of groups needing to coordinate their activities~\cite{Voida:2011:HDC:1978942.1979078}.\looseness=-1
+
+%We focus on \emph{instance-level} matching, as schemas may not always be available, or easily accessible to users.\looseness=-1
+
+
 % Pertaining to each system's ability to integrate information from arbitrary new data sources, however, both systems generally required new sources to either already conform to pre-specified ontologies, or have the user specify such a mapping manually.
 
 % i think we do not need to differentiate between semantic web and database integration here, we're saying they're both bad, let's lump them together to keep the argument flowing and not kill our readers
-The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} research communities have primarily focused efforts on purely-automatic approaches to the problem of data integration.  Such approaches typically take the form of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{direct/instance-level} matching~\cite{suchanek2011paris,castano2006matching}.  We focus on \emph{instance-level} matching, as schemas may not always be available, or easily accessible to users.\looseness=-1
+
 
 %In this section, we motivate our work using three fields: PIM, data integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where consolidating and working with data from multiple sources has remained a challenge for over a decade. Recently however, users are experiencing data fragmentation~\cite{Jones05towardsa} across multiple web-based applications and services, and struggle to consolidate across them~\cite{bergman,boardmansasse}.  In our own previously-conducted field study, (reference anonymised) we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage both online and offline data.  Similar findings from other studies include Voida et al.'s observations of volunteer coordinators' ``homebrew databases'', manually-maintained information assemblages concocted to handle the widely varied and heterogeneous data collection requirements such groups needed to coordinate their activities \cite{Voida:2011:HDC:1978942.1979078}.
 %% TODO MORE HERE
