better rel work

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -223,3 +223,78 @@
   year = {2007},
   pages = {27--33},
 } 
+
+@inproceedings{Lin:2009:EPM:1502650.1502667,
+ author = {Lin, James and Wong, Jeffrey and Nichols, Jeffrey and Cypher, Allen and Lau, Tessa A.},
+ title = {End-user programming of mashups with vegemite},
+ booktitle = {Proceedings of the 14th international conference on Intelligent user interfaces},
+ series = {IUI '09},
+ year = {2009},
+ isbn = {978-1-60558-168-2},
+ location = {Sanibel Island, Florida, USA},
+ pages = {97--106},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1502650.1502667},
+ doi = {10.1145/1502650.1502667},
+ acmid = {1502667},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {automation, data integration, end-user programming, mashup, programming by demonstration, web},
+}
+
+@inproceedings{Wong:2007:MMM:1240624.1240842,
+ author = {Wong, Jeffrey and Hong, Jason I.},
+ title = {Making mashups with marmite: towards end-user programming for the web},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '07},
+ year = {2007},
+ isbn = {978-1-59593-593-9},
+ location = {San Jose, California, USA},
+ pages = {1435--1444},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1240624.1240842},
+ doi = {10.1145/1240624.1240842},
+ acmid = {1240842},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {end-user programming, mashup, spreadsheet, web services},
+}
+
+@article{citeulike:8887891,
+    abstract = {{Pipes is an interactive data aggregator and manipulator that lets you mashup your favorite online data sources. Pipes could be used to "combine many feeds into one, then sort, filter and translate to create your ultimate custom feed. In this article, the author describes how to use Yahoo! Pipes. The author shares what she has learned in experimenting with pipes. (Contains 6 figures and 4 online resources.)}},
+    author = {Fagan, Jody C.},
+    citeulike-article-id = {8887891},
+    citeulike-linkout-0 = {http://www.eric.ed.gov/ERICWebPortal/detail?accno=EJ778807},
+    day = {0},
+    journal = {Computers in Libraries},
+    keywords = {yahoo\_pipes},
+    month = {},
+    number = {10},
+    pages = {10--17},
+    posted-at = {2011-02-25 17:24:29},
+    priority = {2},
+    publisher = {Information Today, Inc. 143 Old Marlton Pike, Medford, NJ 08055-8750. Tel: 800-300-9868; Tel: 609-654-6266; Fax: 609-654-4309; e-mail: custserv@infotoday.com; Web site: http://infotoday.com},
+    title = {{Mashing up Multiple Web Feeds Using Yahoo! Pipes}},
+    url = {http://www.eric.ed.gov/ERICWebPortal/detail?accno=EJ778807},
+    volume = {27},
+    year = {2007}
+}
+
+
+@inproceedings{Dumais:2003:SIS:860435.860451,
+ author = {Dumais, Susan and Cutrell, Edward and Cadiz, JJ and Jancke, Gavin and Sarin, Raman and Robbins, Daniel C.},
+ title = {Stuff I've seen: a system for personal information retrieval and re-use},
+ booktitle = {Proceedings of the 26th annual international ACM SIGIR conference on Research and development in informaion retrieval},
+ series = {SIGIR '03},
+ year = {2003},
+ isbn = {1-58113-646-3},
+ location = {Toronto, Canada},
+ pages = {72--79},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/860435.860451},
+ doi = {10.1145/860435.860451},
+ acmid = {860451},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {interactive information retrieval, personal information management, user interfaces, user studies},
+} 
