--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -133,9 +133,9 @@ In this section, we motivate our work using three fields: PIM, data integration,
 The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
 \end{quote}
 
-The user experience benefits of conquering such data integration challenges have been demonstrated in PIM prototype systems with integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and \emph{Stuff I've Seen}\cite{stuffiveseen}, showed the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about the people, places and things mentioned throughout his or her files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated the reduced effort and increased efficiency of being able to view and re-use information easily in multiple task contexts without fragmentation or loss of consistency when a single, consolidated data model was used across applications. 
+The user experience benefits of conquering such data integration challenges have been demonstrated in PIM prototype systems with integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and \emph{Stuff I've Seen}\cite{Dumais:2003:SIS:860435.860451}, showed the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about the people, places and things mentioned throughout his or her files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated the reduced effort and increased efficiency of being able to view and re-use information easily in multiple task contexts without fragmentation or loss of consistency when a single, consolidated data model was used across applications. 
 
-Therefore, despite the multifaceted challenges of data integration, various fields have sought methods to resolve them. The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} fields, for example, have pursued automatic, recently machine-learning approaches to data integration, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching}.   In contrast, the end-user programming community has pursued user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{mashmaker}, Marmite \cite{marmite}, and Vegemite \cite{vegemite}) and visual programming languages such as Yahoo Pipes \cite{pipes}.
+Therefore, despite the multifaceted challenges of data integration, various fields have sought methods to resolve them. The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} fields, for example, have pursued automatic, recently machine-learning approaches to data integration, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching}.   In contrast, the end-user programming community has pursued user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming languages such as Yahoo Pipes \cite{citeulike:8887891}.
 
 Our approach is most directly inspired by systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but which, by generalising directly from examples, avoids the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which aims to allow people to easily consolidate and compare instances by their properties.
 
@@ -167,8 +167,6 @@ Our approach is most directly inspired by systems that, like the end-user progra
 % Semi-automatic approaches use varying levels of support to aid a user, from prompting users to manually check flagged alignments, to suggesting possible alignments.  Allowing users to compare instances across heterogeneous data is powerful because users can combine and evaluate multiple sources.  In principle, automatic instance matching approaches would allow users to seamlessly browse this data, however for now and the foreseeable future such approaches cannot make use of personal knowledge and do not guarantee their alignments.  Therefore, in our work, we adopt a semi-automated matching approach, which will support the user to make alignments between web data and their personal data.
 
 
-
-
 % integrated into the above :: 
 
 %% The Semantic Web research community has approached the problem of data integration in terms of \emph{ontology matching}, which can be split into two distinct strategies: \emph{schema} and \emph{instance} matching.  Instance matching differs from schema level matching in that it aims to detect instances referring to the same real world object, while schema matching aims to find a set of mappings between concepts and properties in different ontologies. For our purposes of allowing users to explore and compare data from different websites, we are particularly interested in aligning instances of the most common forms of data that people compare from website to website.  
@@ -178,7 +176,6 @@ Our approach is most directly inspired by systems that, like the end-user progra
 % The approaches used to match instances typically use: natural language processing, using lexicons like Wordnet to identify synonyms, and word stems \cite{euzenat2004api}; machine learning techniques \cite{doan2003learning}; probabilistic approaches \cite{suchanek2011paris} and comparisons of instance schemas structural and logical definitions \cite{castano2006matching}.  In our case, this is problematic because information from the web does not always have a schema.  In real-world scenarios, semi-automatic ontology matching approaches are favoured over automatic because reconciling the differences between ontologies that were designed for different purposes is not always accurate.  Semi-automatic approaches use varying levels of support to aid a user, from prompting users to manually check flagged alignments, to suggesting possible alignments.  Allowing users to compare instances across heterogeneous data is powerful because users can combine and evaluate multiple sources.  In principle, automatic instance matching approaches would allow users to seamlessly browse this data, however for now and the foreseeable future such approaches cannot make use of personal knowledge and do not guarantee their alignments.  Therefore, in our work, we adopt a semi-automated matching approach, which will support the user to make alignments between web data and their personal data.
 
 \section{Pre-studies: Identifying Needs and Challenges}
-
 %% not sure where this goes >> but i want to keep it
 
 We performed an exploratory sequential mixed-method study to help us design our contribution. For our first pre-study, we sought an updated understanding on the use of multiple information sources in information gathering on the Web. There were two driving questions behind this inquiry: first, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of supersites would provide greater benefit than tackling the more challenging problem of integrating data from arbitrary sources on the Web.  Second, why did people choose a single or multiple sources for information gathering?  If a number of websites were used, why was this preferred over a single source?
