--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -92,7 +92,7 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-The information processing capabilities of humans enable us to opportunistically draw and integrate knowledge from nearly any information sources that become available.  However, enabling similar, opportunistic integration of digital, structured data from diverse sources has remained difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled separately and differently are brought together.  In this paper, we present an investigation of the feasibility of extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants understood the new interaction mechanisms introduced, and, second, that they made more carefully-justified decisions weighing a greater number of factors, while spending less effort and taking the same amount of time, during subjective-choice tasks when using DataPalette than a control (web page and spreadsheet) interface. 
+The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source that becomes available.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modeled separately are brought together.  In this paper, we present an investigation of the feasibility of extending the scope of Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the vast, emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants readily understood the new interaction mechanisms which were introduced.  Secondly, participants made more carefully justified decisions, even while weighing a greater number of factors, while expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up (web page and spreadsheet interface). 
 %The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 % While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor. In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web. We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 
@@ -137,7 +137,7 @@ The user experience benefits of conquering such data integration challenges have
 
 Therefore, despite the multifaceted challenges of data integration, various fields have sought methods to resolve them. The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} fields, for example, have pursued automatic, recently machine-learning approaches to data integration, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching}.   In contrast, the end-user programming community has pursued user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming languages such as Yahoo Pipes \cite{citeulike:8887891}.
 
-Our approach is most directly inspired by systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but which, by generalising directly from examples, avoids the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which aims to allow people to easily consolidate and compare instances by their properties.
+Our approach is most similar to systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but that avoid the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which aims to allow people to easily consolidate and compare instances by their properties.
 
 % algorithms that train on a corpus of alignments and produce new alignments on unseen data schemas or instances, respectively
 
