--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -122,9 +122,9 @@ In this paper, we present an investigation of ways that PIM tools might be exten
 
 % Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: address books (contact info), event calendars (events), music (songs/tracks), shopping (product info) social networking (profiles) and weather (forecasts), finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
-Second, we conducted a structural analysis of data records from personal data sources to identify the most common kinds of problems likely to arise from integrating data from these types of sources.  We examined data sources in six common domains: contacts, events, music, shopping, social networking and weather. Our analysis found that while terminological heterogeneity was the most common issue for unifying simpler data records (such as address book contacts and social network profiles), structural differences were exhibit among more complex schemas, such as online retailers' product catalogues.
+Second, we carried out a structural analysis of data records from personal data sources to identify the most common kinds of problems likely to arise from integrating data from these multiple sources.  For this, we examined data sources from six common domains: contacts, events, music, shopping, social networking and weather. We discovered in our analysis that while terminological heterogeneity was the most common issue for unifying simpler data records (such as address book contacts and social network profiles), structural differences were exhibited among more complex schemas, such as online retailers' product catalogues.
 
-Third, we developed DataPalette, an interface that enables serendipitous ``data mixing,'' negating the need for people to write bespoke code to effectively combine and compare heterogenous data.  It was principally designed to support people's data integration needs for data heterogeneity, using observations made from the previous studies.  In particular, we designed a user-centric interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then performed a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we devised, and that this interface effectively improved people's ability to perform multifaceted decision making tasks using multiple sources.
+Third, we developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  This interface was principally designed to support people's data integration needs for data heterogeneity, using observations made during the pre-studies. In particular, DataPalette was designed to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then conducted a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we had devised, and that it effectively improved people's ability to perform multifaceted decision-making tasks using multiple sources.
 
 \section{Background}
 In this section, we motivate our work using three fields: PIM, data integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, which foregrounded work to consolidate data from multiple sources and which still remains a challenge.  Specifically, reconciling the differences that arise among representations when data is created by different people, at different times, for different purposes. As described by Alon Halevy:
@@ -133,11 +133,11 @@ In this section, we motivate our work using three fields: PIM, data integration,
 The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
 \end{quote}
 
-The user experience benefits of conquering such data integration challenges have been demonstrated in PIM prototype systems with integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and \emph{Stuff I've Seen}\cite{Dumais:2003:SIS:860435.860451}, showed the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about the people, places and things mentioned throughout his or her files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated the reduced effort and increased efficiency of being able to view and re-use information easily in multiple task contexts without fragmentation or loss of consistency when a single, consolidated data model was used across applications. 
+The user experience benefits of conquering such data integration challenges have been demonstrated in PIM prototype systems with integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and SIS \cite{Dumais:2003:SIS:860435.860451}, showed the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about the people, places and things mentioned throughout his or her files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated the benefit of viewing and re-using information easily in multiple task contexts without fragmentation or loss of consistency when a single, consolidated data model was used across applications. 
 
 Therefore, despite the multifaceted challenges of data integration, various fields have sought methods to resolve them. The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} fields, for example, have pursued automatic, recently machine-learning approaches to data integration, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching}.   In contrast, the end-user programming community has pursued user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming languages such as Yahoo Pipes \cite{citeulike:8887891}.
 
-Our approach is most similar to systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but that avoid the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which aims to allow people to easily consolidate and compare instances by their properties.
+Our approach is most similar to systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but that avoid the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which allows users to easily consolidate and compare instances by their properties.
 
 % algorithms that train on a corpus of alignments and produce new alignments on unseen data schemas or instances, respectively
 
@@ -224,42 +224,6 @@ All users experienced using multiple web sites in order to complete a task, and 
 
 %People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
 
-\begin{table*}[htb]
-\small
-\begin{tabular}{p{2.0cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}}
-				&				& {\bf average}				& {\bf average }				& 				& {\bf prop name}			& {\bf structural} 			& {\bf model } \\
-				& {\bf source}		& {\bf props/record}			& {\bf depth/record}			& {\bf equivalent to}	& {\bf inconsistent}			& {\bf inconsistency} 			& {\bf inconsistency} \\
-\hline
-social networking	& google+			& 12						& 1.52					& tw:5, li:4, fb:4		& tw:3, li:2, fb:2				& tw:0, li:1, fb:1				& tw:0, li:0, fb:0 \\
-(profiles)			& twitter			& 39						& 1.37					& li:4, fb:4 			& li:2, fb:1					& li:0, fb:0					& li:0, fb:0 \\
-				& linkedin			& 18						& 2.42					& fb:7			& fb:5					& fb:3					& fb:0 \\
-				& facebook		& 22						& 1.5						&				&						&						& \\
-\hline
-calendars			& google calendar	& 15						& 1.46					& eb:9			& eb:6					& eb:1					& eb:1 \\
-(events)			& eventbrite		& 32						& 1.43					&				&						& 						& \\
-\hline
-retail				& milo			& 5						& 1.2						& z:2, s:3, e:1, a:3	& z:2, s:2, e:1, a:3			& z:0, s:0, e:0, a:2			& z:0, s:0, e:0, a:0 \\
-(products)			& zappos			& 6						& 1						& s:2, e:2, a:3		& s:2, e:2, a:2				& s:0, e:0, a:0				& s:0, e:0, a:0 \\
-				& shopping.com	& 11						& 3.74					& e:2, a:8			& e:2, a:8					& e:0, a:0					& e:0, a:0 \\
-				& etsy			& 31						& 1.13					& a:11			& a:10					& a:1						& a:2 \\
-				& amazon			& 108					& 1.96					&				& 						&						& \\
-\hline
-contacts			& google contacts	& 7						& 1.46					& yp:2			& yp:2					& yp: 0					& yp: 0 \\
-				& yellowpages		& 25						& 1						&				&						&						& \\
-\hline
-music			& echonest		& 4						& 1.83					& so:3, r:3, sp:3		& so:3, r:3, sp:3				& so:0, r:0, sp:0				& so:0, r:0, sp:0 \\
-(songs/			& soundcloud		& 42						& 2.14					& r:12, sp:7		& r:11, sp:6 				& r:1, sp:1					& r:1, sp:0 \\
-tracks)			& rdio			& 27						& 2						& sp: 7			& sp: 6					& sp: 1					& sp: 1 \\
-				& spotify			& 10						& 2.44					&				&						&						& \\
-\hline
-weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 5, y: 4				& wu: 0, y: 0 \\
-(forecasts)		& wundergound	& 52						& 1.38					& y:12			& y:12					& y:7						& y:3 \\
-				& yahoo weather	& 22						& 1.58					&				&						&						& \\
-\end{tabular}
-\caption{\emph{PS.2 Analysis of Data Feeds}: Structural statistics about data sampled from each API organised by category.  The first column lists the category and type of data record that was examined.  Columns 3 and 4 list the average number of properties per data record, and number of levels from root to leaf. The remaining fields show results from a pairwise analysis of data records from each of the data sources with those of the others in each category; values are prefixed with the first letter(s) of the target schema the row schema was compared against. For example ``Tw:5'' in the 5th column of Google+ row indicates that Facebook and Twitter records had 5 equivalent fields. }\label{tbl:prestudy2}
-\end{table*}
-
-
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb: \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
 
@@ -274,7 +238,7 @@ The third metric measured degree of overlap among sources in each category.  Thi
 Once established, equivalent properties were examined firstly for naming inconsistencies.  Then, ignoring property names, we examined whether the property's values were structurally compatible. If both values consisted of the data type and same equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  Finally, we examined equivalent fields which were incomparable for reasons other than structural or terminological differences.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-Table \ref{tbl:prestudy2} shows the raw results of the process described.  A number of features were quite striking about the data; First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories. Looking at equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
+While most of the data records were small and relatively simple, nearly one in each category provided access to substantially larger and more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Examining equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
 
 The second finding is that equivalent properties were only rarely given the same name.  Thus, terminological heterogeneity was prevalent across properties and records we observed.  Structural heterogeneity, was slightly rarer; the most common case consisted of a leaf property from one data source modelled as a subtree in the other.  We also encountered two examples where data was nested in textual description fields, which hints of their intended use in feed readers rather than in structured data applications.  Examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
 
