--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -238,9 +238,9 @@ The third metric measured degree of overlap among sources in each category.  Thi
 Once established, equivalent properties were examined firstly for naming inconsistencies.  Then, ignoring property names, we examined whether the property's values were structurally compatible. If both values consisted of the data type and same equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  Finally, we examined equivalent fields which were incomparable for reasons other than structural or terminological differences.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-While most of the data records were small and relatively simple, nearly one in each category provided access to substantially larger and more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Examining equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
+While most of the data records were small and relatively simple, nearly one in each category provided access to substantially larger and more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category separately, revealed overall little overlap among records, except among the smallest records (which had few properties to begin with).  The fact that most of the data records had more unique properties than properties that were redundant with records from other sources, suggests that consolidating such records would effectively, substantially increase the amount of information held by each.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent in other sources' records.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions reveal that data APIs often reflect each provider's own specific needs, and that integrating information across multiple sources may often be necessary to create more complete and useful representations.
 
-The second finding is that equivalent properties were only rarely given the same name.  Thus, terminological heterogeneity was prevalent across properties and records we observed.  Structural heterogeneity, was slightly rarer; the most common case consisted of a leaf property from one data source modelled as a subtree in the other.  We also encountered two examples where data was nested in textual description fields, which hints of their intended use in feed readers rather than in structured data applications.  Examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
+The second finding is that equivalent properties were only rarely given the same name; thus, terminological (or naming) heterogeneity was prevalent across nearly all properties of records observed.  Structural inconsistencies, were slightly rarer, the most common case of which occurred in approximately 1 in 4 records observed, consisted of a simple literal property from one data record expanded out as a sub-structure in the other.  We also encountered two examples where data was nested in textual description fields, which hints of their intended use in feed readers rather than in structured data applications.  Examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
 
 We also examined the source schemas of data sources for enumerated value types.  There was substantial terminological inconsistency among such value ranges of such types, but also cases where sources had values not represented in the other source's ranges.  For example, ``gender''  on Facebook allowed only ``male'' and ``female'' for values, while Google+ included a third option,``other''.  Few string representations of enumerated value sets matched across data sources perfectly.
 
